--- a/src/ename/frontend/Register.html
+++ b/src/ename/frontend/Register.html
@@ -3,40 +3,106 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MetaMask Wallet Connection and EName Translator</title>
+    <title>Grab your EName today! - MyEName</title> <!-- Updated title with company name -->
+    <style>
+        /* Add your CSS styles here */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+        }
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+        .logo {
+            font-size: 24px;
+            font-weight: bold;
+        }
+        button#connectButton {
+            background-color: #4CAF50;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+        }
+        main {
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 0 20px;
+        }
+        .hero h1 {
+            font-size: 36px;
+        }
+        .translator h2 {
+            margin-top: 20px;
+        }
+        /* Add more styles as needed */
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
+        }
+    </style>
     <script src="https://cdn.jsdelivr.net/npm/web3@1.5.3/dist/web3.min.js"></script>
 </head>
 <body>
-    <h1>MetaMask Wallet Connection and EName Translator</h1>
-    <button id="connectButton">Connect to MetaMask</button>
-    <p id="connectionStatus">Not Connected</p>
+    <header>
+        <nav>
+            <p id="myename">MyEName</p> <!-- Updated company name -->
+            <button id="connectButton">Connect to MetaMask</button>
+        </nav>
+    </header>
+    <main>
+        <section class="hero">
+        </section>
+        <section class="translator">
+            <h2>EName to wallet address translation</h2>
+            <label for="enameInput">Enter EName:</label>
+            <input type="text" id="enameInput">
+            <button onclick="translateToEAddress()">Translate to wallet address</button>
+            <p id="eaddressResult">EAddress will be displayed here</p>
 
-    <h2>EName to EAddress Translator</h2>
-    <label for="enameInput">Enter EName:</label>
-    <input type="text" id="enameInput">
-    <button onclick="translateToEAddress()">Translate to EAddress</button>
-    <p id="eaddressResult">EAddress will be displayed here</p>
+            <h2>Wallete address to EName translation</h2>
+            <label for="eaddressInputLabel">Enter wallet address:</label>
+            <input type="text" id="eaddressInput" style="width: 320px;">
+            <button onclick="translateToEName()">Translate to EName</button>
+            <p id="enameResult">EName will be displayed here</p>
 
-    <h2>EAddress to EName Translator</h2>
-    <label for="eaddressInput">Enter EAddress
-    <input type="text" id="eaddressInput" style="width: 350px;">
-    <button onclick="translateToEName()">Translate to EName</button>
-    <p id="enameResult">EName will be displayed here</p>
-
-    <h2>Register EName</h2>
-    <label for="registerENameInput">Enter EName to Register:</label>
-    <input type="text" id="registerENameInput">
-    <button onclick="registerEName()">Register EName</button>
-    <p id="registrationStatus"></p>
-
+            <h2>Register EName</h2>
+            <label for="registerENameInput">Enter EName to Register:</label>
+            <input type="text" id="registerENameInput">
+            <button onclick="registerEName()">Register EName</button>
+            <p id="registrationStatus"></p>
+        </section>
+    </main>
+    <footer>
+        &copy; 2024 MyEName. All rights reserved.
+    </footer>
 
     <script>
+        // Add your JavaScript code here
         const contractAddress = "0xBAA5c79d9a4C9E60a19D1C7884E2b400A6D8211A";
         let enameContract;
         let isMetaMaskConnected = false;
         let web3;
         // Declare accounts globally
         let accounts = [];
+        const slogan =  'EName - your permanent identity on the blockchain';        
+	let myenameElement;
+	let myename;
+
+        document.getElementById('myename').innerText = slogan;
 
         // Function to load contract ABI from a file
         async function loadContractABI() {
@@ -108,13 +174,11 @@
             }
         }
 
-
-
         // Check if MetaMask is installed
         if (typeof window.ethereum !== 'undefined') {
             const connectButton = document.getElementById('connectButton');
-            const connectionStatus = document.getElementById('connectionStatus');
-    
+            myenameElement= document.getElementById('myename');
+
             // Function to handle the connection toggle
             async function toggleConnection() {
                 if (!isMetaMaskConnected) {
@@ -123,12 +187,20 @@
                         accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
                         isMetaMaskConnected = true;
                         connectButton.innerText = 'Disconnect from MetaMask';
-                        connectionStatus.innerText = 'Connected';
 
                         // Initialize Web3 and the contract
-                        web3 = new Web3(window.ethereum);   
+                        web3 = new Web3(window.ethereum);
                         const contractABI = await loadContractABI();
                         enameContract = new web3.eth.Contract(contractABI, contractAddress);
+
+			// Check if the recipient's EName exists and get their wallet address
+                        myename = await enameContract.methods.ename(accounts[0]).call();
+    
+                        if(myename)
+                           myenameElement.innerText = myename + ': ' + accounts[0];
+	                else
+                           myenameElement.innerText = accounts[0];
+
 
                         // You can now access the user's wallet using web3 and interact with the contract
                     } catch (error) {
@@ -140,7 +212,7 @@
                         await window.ethereum.request({ method: 'eth_accounts' });
                         isMetaMaskConnected = false;
                         connectButton.innerText = 'Connect to MetaMask';
-                        connectionStatus.innerText = 'Not Connected';
+                        myenameElement.innerText = slogan;
 
                         // Clear Web3 and contract instances
                         web3 = null;
