--- a/src/ename/frontend/Register.html
+++ b/src/ename/frontend/Register.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -96,6 +97,7 @@
 
     <script>
         // Add your JavaScript code here
+	// The EName contract has been deployed at Polygon: https://polygonscan.com/token/0xBAA5c79d9a4C9E60a19D1C7884E2b400A6D8211A#code
         const contractAddress = "0xBAA5c79d9a4C9E60a19D1C7884E2b400A6D8211A";
         let enameContract;
         let isMetaMaskConnected = false;
